--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   }
 
   p {
-      background: #ffc125;
+      background: yellow;
       color: #5e2612;
       padding: 10px;
       visibility: hidden;
